# DnD_Digital_Desk

./: .gitignore  LICENSE  README.md  docker-compose.dokploy.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  models.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_BACKUP_1744.py  urls_LOCAL_1744.py  urls_REMOTE_1744.py  views.py
backend/accounts/management/commands/: ensure_superuser.py  seed_demo.py
backend/accounts/migrations/: 0001_initial.py  0002_campaign_characters_campaignnote_chatmessage_and_more.py  0003_campaign_requests_and_visibility.py  0004_character_sheet_layout.py  0005_rename_accounts_ca_status_47a10a_idx_accounts_ca_status_3d881d_idx_and_more.py
backend/config/: models.py  settings.py  urls.py
fronend/: Dockerfile  package.json
fronend/registration/: registration.html
fronend/src/: App.tsx  index.css  index.html  index.ts
fronend/src/pages/: DashboardPage.tsx  DeskLayout.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
fronend/src/pages/desk/: CampaignNotesPage.tsx  CampaignsPage.tsx  CharactersPage.tsx  ChatPage.tsx  SessionsPage.tsx  StorylinePage.tsx
fronend/src/services/: api.ts
fronend/styles/: globals.css
